# skelegent-extras

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  flake.nix
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
a2a/skg-a2a/: Cargo.toml
a2a/skg-a2a/src/: lib.rs
a2a/skg-a2a/src/client/: mod.rs  stream.rs
a2a/skg-a2a/src/server/: handlers.rs  mod.rs  stream.rs
a2a/skg-a2a/tests/: multi_agent.rs  push_and_auth.rs  roundtrip.rs  streaming.rs
auth/neuron-auth-oauth/: Cargo.toml
auth/neuron-auth-oauth/src/: lib.rs
auth/neuron-auth-omp/: Cargo.toml
auth/neuron-auth-omp/src/: lib.rs
auth/neuron-auth-pi/: Cargo.toml
auth/neuron-auth-pi/src/: lib.rs
auth/skg-auth-oauth/: Cargo.toml
auth/skg-auth-oauth/src/: lib.rs
auth/skg-auth-omp/: Cargo.toml
auth/skg-auth-omp/src/: lib.rs
auth/skg-auth-pi/: Cargo.toml
auth/skg-auth-pi/src/: lib.rs
client/neuron-client-parallel/: Cargo.toml
client/neuron-client-parallel/src/: lib.rs
client/skg-client-parallel/: Cargo.toml
client/skg-client-parallel/src/: lib.rs
effects/neuron-effects-git/: Cargo.toml
effects/neuron-effects-git/src/: client.rs  dedup.rs  github.rs  lib.rs  templates.rs  types.rs
effects/skg-effects-git/: Cargo.toml
effects/skg-effects-git/src/: client.rs  dedup.rs  github.rs  lib.rs  templates.rs  types.rs
effects/skg-effects-temporal/: Cargo.toml
effects/skg-effects-temporal/src/: lib.rs
eval/skg-eval/: Cargo.toml
eval/skg-eval/src/: lib.rs
eval/skg-eval/tests/: record_replay_eval.rs
hooks/skg-hook-approval/: Cargo.toml
hooks/skg-hook-approval/src/: lib.rs
hooks/skg-hook-otel/: Cargo.toml
hooks/skg-hook-otel/src/: lib.rs
hooks/skg-hook-replay/: Cargo.toml
hooks/skg-hook-replay/src/: dispatch.rs  infer.rs  lib.rs
hooks/skg-hook-replay/tests/: round_trip.rs
op/neuron-op-sweep/: Cargo.toml
op/neuron-op-sweep-v2/: Cargo.toml
op/neuron-op-sweep-v2/src/: compare.rs  cost.rs  cycle.rs  lib.rs  queries.rs  synthesis.rs  synthesis_operator.rs  types.rs
op/neuron-op-sweep/src/: compare.rs  cycle.rs  lib.rs  operator.rs  provider.rs  queries.rs  research_operator.rs  sweep_provider.rs  synthesis.rs  synthesis_operator.rs  types.rs  workflow.rs
op/skg-op-sweep/: Cargo.toml
op/skg-op-sweep-v2/: Cargo.toml
op/skg-op-sweep-v2/src/: compare.rs  cycle.rs  lib.rs  provider.rs  research_operator.rs  synthesis_operator.rs  types.rs
op/skg-op-sweep/src/: compare.rs  cost.rs  cycle.rs  lib.rs  research_operator.rs  synthesis_operator.rs
orch/neuron-orch-kit/: Cargo.toml
orch/neuron-orch-kit/src/: dispatch.rs  lib.rs  middleware.rs  routing.rs  trace.rs
orch/neuron-orch-sweep/: Cargo.toml
orch/neuron-orch-sweep/src/: budget.rs  cycle.rs  lib.rs  priority.rs
orch/neuron-orch-sweep/tests/: smoke.rs
orch/neuron-orch-temporal/: Cargo.toml
orch/neuron-orch-temporal/src/: client.rs  config.rs  lib.rs
orch/neuron-orch-temporal/tests/: orchestrator_tests.rs
orch/skg-orch-compose/: Cargo.toml
orch/skg-orch-compose/src/: budget.rs  dispatch.rs  lib.rs  middleware.rs  routing.rs
orch/skg-orch-kit/: Cargo.toml
orch/skg-orch-kit/src/: dispatch.rs  lib.rs  middleware.rs  routing.rs  scoped_state.rs
orch/skg-orch-sqlite/: Cargo.toml
orch/skg-orch-sqlite/src/: controller.rs  driver.rs  lib.rs
orch/skg-orch-sqlite/tests/: sqlite_orch_flow.rs
orch/skg-orch-sweep/: Cargo.toml
orch/skg-orch-sweep/src/: budget.rs  cycle.rs  lib.rs  priority.rs
orch/skg-orch-sweep/tests/: smoke.rs
orch/skg-orch-temporal/: Cargo.toml
orch/skg-orch-temporal/src/: client.rs  config.rs  lib.rs
orch/skg-orch-temporal/tests/: orchestrator_tests.rs
run/skg-run-sqlite/: Cargo.toml
run/skg-run-sqlite/src/: checkpoint.rs  lib.rs  schema.rs  store.rs  timer.rs
run/skg-run-sqlite/tests/: sqlite_run_store.rs
state/neuron-state-cozo/: Cargo.toml
state/neuron-state-cozo/src/: engine.rs  lib.rs  schema.rs  scope.rs  store.rs
state/neuron-state-cozo/tests/: store_tests.rs
state/neuron-state-sqlite/: Cargo.toml
state/neuron-state-sqlite/src/: lib.rs  search.rs
state/skg-state-cozo/: Cargo.toml
state/skg-state-cozo/src/: engine.rs  lib.rs  schema.rs  scope.rs  search.rs  store.rs
state/skg-state-cozo/tests/: hybrid_integration_test.rs  hybrid_tests.rs  memory_evolution_test.rs  store_tests.rs  vector_tests.rs
state/skg-state-sqlite/: Cargo.toml
state/skg-state-sqlite/src/: lib.rs  schema.rs
