[workspace]
resolver = "3"
members = [
  "op/skg-op-sweep",
  "op/skg-op-sweep-v2",
  "orch/skg-orch-sweep",
  "orch/skg-orch-kit",
  "orch/skg-orch-temporal",
  "state/skg-state-sqlite",
  "state/skg-state-cozo",
  "effects/skg-effects-git",
  "auth/skg-auth-oauth",
  "auth/skg-auth-pi",
  "auth/skg-auth-omp",
  "client/skg-client-parallel",
  "run/skg-run-sqlite",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/secbear/skg-extras"
homepage = "https://github.com/secbear/skg-extras"
