[package]
name = "neuron-auth-oauth"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OAuth 2.0 Device Authorization Flow provider for neuron-auth"

[dependencies]
neuron-auth = { path = "../../../neuron/auth/neuron-auth", version = "0.4.0" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
