[package]
name = "neuron-auth-omp"
version = "0.4.0"
edition.workspace = true
rust-version = "1.85"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AuthProvider reading from ~/.omp/agent/agent.db (read-only; no token refresh)"

[dependencies]
neuron-auth = { path = "../../../neuron/auth/neuron-auth", version = "0.4.0" }
async-trait = "0.1"
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
