[package]
name = "neuron-client-parallel"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed HTTP client for Parallel.ai search, extract, and task APIs"

[dependencies]
neuron-auth = { path = "../../../neuron/auth/neuron-auth", version = "0.4.0" }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
