[package]
name = "skg-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Evaluation framework for skelegent agents"
publish = false

[dependencies]
layer0 = { path = "../../../skelegent/layer0" }
skg-turn = { path = "../../../skelegent/turn/skg-turn" }
skg-provider-router = { path = "../../../skelegent/provider/skg-provider-router" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
