[package]
name = "skg-hook-approval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Approval guard middleware for skelegent dispatch and inference"
publish = false

[dependencies]
layer0 = { path = "../../../skelegent/layer0" }
skg-turn = { path = "../../../skelegent/turn/skg-turn", version = "0.4.1" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
