[package]
name = "neuron-op-sweep-v2"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sweep operator v2 — unified Message type, closure-based compaction"

[dependencies]
layer0 = { path = "../../../neuron/layer0", version = "0.4.0" }
neuron-turn = { path = "../../../neuron/turn/neuron-turn", version = "0.4.0" }
neuron-orch-kit = { path = "../../orch/neuron-orch-kit", version = "0.1.0" }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
rust_decimal = "1"
tracing = "0.1"

[dev-dependencies]
layer0 = { path = "../../../neuron/layer0", features = ["test-utils"] }
neuron-turn = { path = "../../../neuron/turn/neuron-turn", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
