[package]
name = "neuron-op-sweep"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sweep operator for neuron — per-decision research, comparison, and verdict"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["neuron", "ai", "agent", "sweep", "operator"]

[dependencies]
layer0 = { path = "../../../neuron/layer0", version = "0.4.0" }
neuron-turn = { path = "../../../neuron/turn/neuron-turn", version = "0.4.0" }
neuron-context = { path = "../../../neuron/turn/neuron-context", version = "0.4.0" }
neuron-state-sqlite = { path = "../../state/neuron-state-sqlite", version = "0.4.0" }
neuron-auth = { path = "../../../neuron/auth/neuron-auth", version = "0.4.0" }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
layer0 = { path = "../../../neuron/layer0", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }