[package]
name = "skg-op-sweep"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sweep operator for skelegent — per-decision research, comparison, and verdict"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["skelegent", "ai", "agent", "sweep", "operator"]

[dependencies]
layer0 = { path = "../../../skelegent/layer0", version = "0.4.0" }
skg-turn = { path = "../../../skelegent/turn/skg-turn", version = "0.4.0" }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
skg-orch-kit = { path = "../../orch/skg-orch-kit", version = "0.1.0" }
rust_decimal = "1"
tracing = "0.1"

[dev-dependencies]
layer0 = { path = "../../../skelegent/layer0", features = ["test-utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
skg-turn = { path = "../../../skelegent/turn/skg-turn", features = ["test-utils"] }