[package]
name = "neuron-orch-sweep"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sweep orchestrator for neuron — priority scheduling, budget enforcement, and cycle management"

[dependencies]
layer0 = { path = "../../../neuron/layer0", version = "0.4.0" }
neuron-op-sweep = { path = "../../op/neuron-op-sweep", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
chrono = "0.4"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
neuron-state-sqlite = { path = "../../state/neuron-state-sqlite", version = "0.4.0" }
neuron-state-memory = { path = "../../../neuron/state/neuron-state-memory", version = "0.4.0" }
neuron-effects-git = { path = "../../effects/neuron-effects-git", version = "0.4.0" }
