[package]
name = "neuron-orch-temporal"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Temporal-backed Orchestrator implementation for neuron"

[features]
default = []
# Gate the real temporal-sdk-core dependency behind this feature.
# Without it, TemporalOrch uses a mock client suitable for testing.
# Requires cmake, protobuf compiler in build environment.
temporal-sdk = ["dep:tonic"]

[dependencies]
layer0 = { path = "../../../neuron/layer0", version = "0.4.0" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tonic = { version = "0.12", optional = true }

[dev-dependencies]
layer0 = { path = "../../../neuron/layer0", features = ["test-utils"], version = "0.4.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
