[package]
name = "skg-run-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite-backed durable run persistence for skelegent"
categories = ["asynchronous", "database"]
keywords = ["skelegent", "durable", "run", "sqlite"]

[dependencies]
skg-run-core = { path = "../../../skelegent/orch/skg-run-core", version = "0.4.1" }
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
