[package]
name = "neuron-state-cozo"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CozoDB-backed StateStore implementation with graph and hybrid search"

# ── Feature flags ─────────────────────────────────────────────────────────────
#
# By default this crate uses an in-memory HashMap backend — no native
# dependencies required. Suitable for testing and ephemeral agent memory.
#
# Enable `rocksdb` to activate a real CozoDB backend with persistent RocksDB
# storage. Requires cmake and a C++ compiler in the build environment.
#
[features]
default = []
# Activate real CozoDB backend with RocksDB storage.
# Requires cmake and C++ compiler in build environment.
# Without this feature, a HashMap-based stub is used.
rocksdb = ["dep:cozo"]

[dependencies]
layer0 = { path = "../../../neuron/layer0", version = "0.4.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
cozo = { version = "0.7.6", default-features = false, features = ["storage-rocksdb", "graph-algo"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
