[package]
name = "skg-state-cozo"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CozoDB-backed StateStore implementation with graph and hybrid search"

# ── Feature flags ─────────────────────────────────────────────────────────────
#
# By default this crate uses an in-memory HashMap backend — no native
# dependencies required. Suitable for testing and ephemeral agent memory.
#
# Enable `cozo` to activate a real CozoDB backend with in-memory Datalog
# storage (pure Rust, no native deps). Enable `rocksdb` to add persistent
# RocksDB storage on top (requires cmake + C++ compiler).
#
[features]
default = []
# Real CozoDB with in-memory storage (Datalog queries, no native deps)
cozo = ["dep:cozo", "cozo/rayon"]
# Real CozoDB with RocksDB persistent storage (requires cmake + C++)
rocksdb = ["cozo", "cozo/storage-rocksdb"]

[dependencies]
layer0 = { path = "../../../skelegent/layer0", version = "0.4.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
cozo = { version = "0.7.6", default-features = false, features = ["rayon"], optional = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
