[package]
name = "skg-state-sqlite"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite-backed StateStore with FTS5 search for skelegent"
readme = "README.md"
categories = ["asynchronous", "database"]
keywords = ["skelegent", "ai", "agent", "state", "sqlite"]

[dependencies]
layer0 = { path = "../../../skelegent/layer0", version = "0.4.0" }
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
rusqlite = { version = "0.34", features = ["bundled", "serde_json"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tempfile = "3"
